SFDCProject/src/objects/Exception__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Job__c</fullName>
        <externalId>true</externalId>
        <label>Batch Job</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Full__c</fullName>
        <inlineHelpText>If we have to truncate the message due to length (255), then we will store the complete message in this big field.</inlineHelpText>
        <label>Message Full</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <inlineHelpText>This is either batch job or any particular identifiable module from where the exception was logged.</inlineHelpText>
        <label>Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <inlineHelpText>If the error that occurred corresponds to any specific record, that record&apos;s details can be stored in this field and Object_Id__c field. This should indicate the that record&apos;s object api name like Opportunity or Asset__c etc.</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <inlineHelpText>If the error that occurred corresponds to any specific record, that record&apos;s details can be stored in this field and Object__c field. This field should store that record&apos;s id value. The Object URL formula field will create a user with &apos;/&lt;record id&gt;.</inlineHelpText>
        <label>Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record__c</fullName>
        <formula>If(Not(IsBlank(Record_Id__c)), HYPERLINK(&apos;/&apos; + Record_Id__c, &apos;View Record&apos;), null)</formula>
        <label>Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <inlineHelpText>If this logging is applicable to any particular system, then it can be added here. For ex., this could be one of the external system which invoked the api.</inlineHelpText>
        <label>System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Exception</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Batch_Job__c</columns>
        <columns>Class__c</columns>
        <columns>Method__c</columns>
        <columns>Exception_Type__c</columns>
        <columns>Message__c</columns>
        <columns>Details__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Google_to_Sfdc_Sync_Errors</fullName>
        <columns>NAME</columns>
        <columns>Batch_Job__c</columns>
        <columns>Class__c</columns>
        <columns>Method__c</columns>
        <columns>Exception_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Message__c</columns>
        <columns>Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Batch_Job__c</field>
            <operation>equals</operation>
            <value>GoogleCalendarSync/GoogleToSalesforce</value>
        </filters>
        <label>All Google to Sfdc Sync Errors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Google_to_Sfdc_Sync_Errors_Today</fullName>
        <columns>NAME</columns>
        <columns>Batch_Job__c</columns>
        <columns>Class__c</columns>
        <columns>Method__c</columns>
        <columns>Exception_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Message__c</columns>
        <columns>Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Batch_Job__c</field>
            <operation>equals</operation>
            <value>GoogleCalendarSync/GoogleToSalesforce</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Google to Sfdc Sync Errors Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_IKnock_Lead_Updates_Errors_Today</fullName>
        <columns>NAME</columns>
        <columns>Batch_Job__c</columns>
        <columns>Class__c</columns>
        <columns>Details__c</columns>
        <columns>Exception_Type__c</columns>
        <columns>Message__c</columns>
        <columns>Method__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Batch_Job__c</field>
            <operation>equals</operation>
            <value>IKnockOptyUpdateBatch</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All IKnock Lead Updates Errors Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Sfdc_to_Google_Sync_Errors</fullName>
        <columns>NAME</columns>
        <columns>Batch_Job__c</columns>
        <columns>Class__c</columns>
        <columns>Method__c</columns>
        <columns>Exception_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Message__c</columns>
        <columns>Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Batch_Job__c</field>
            <operation>equals</operation>
            <value>GoogleCalendarSync/SalesforceToGoogle</value>
        </filters>
        <label>All Sfdc to Google Sync Errors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Sfdc_to_Google_Sync_Errors_Today</fullName>
        <columns>NAME</columns>
        <columns>Batch_Job__c</columns>
        <columns>Class__c</columns>
        <columns>Method__c</columns>
        <columns>Exception_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Message__c</columns>
        <columns>Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Batch_Job__c</field>
            <operation>equals</operation>
            <value>GoogleCalendarSync/SalesforceToGoogle</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Sfdc to Google Sync Errors Today</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EXPN-{00000000}</displayFormat>
        <label>Exception#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>